数据库调整

--- a/GreenPlatform/src/main/resources/static/style/web/webStyle.css
+++ b/GreenPlatform/src/main/resources/static/style/web/webStyle.css
@@ -205,7 +205,7 @@ header{
     font-weight: 500;
     display: inline;
 }
-.popular-packages .single-package .package-content #cSpjg {
+.popular-packages .single-package .package-content #nSpjg {
     color: #37b721;
     font-weight: 600;
     display: inline-block;
