--- a/GreenPlatform/src/main/resources/templates/plate/spgl/edit.html
+++ b/GreenPlatform/src/main/resources/templates/plate/spgl/edit.html
@@ -43,10 +43,10 @@
                     <input type="text" class="form-control" id="cSpmc" name="cSpmc" placeholder="请输入商品名称">
                 </td>
                 <td align="right">
-                    <label for="cSpjg" class="control-label"><i class="require">*</i>商品价格:</label>
+                    <label for="nSpjg" class="control-label"><i class="require">*</i>商品价格:</label>
                 </td>
                 <td align="left">
-                    <input type="text" class="form-control" id="cSpjg" name="cSpjg" placeholder="请输入商品价格">
+                    <input type="text" class="form-control" id="nSpjg" name="nSpjg" placeholder="请输入商品价格">
                 </td>
             </tr>
             <tr>
