完善系统日志处理与业务操作验证

--- a/GreenPlatform/src/main/resources/templates/plate/index.html
+++ b/GreenPlatform/src/main/resources/templates/plate/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>绿沙平台后台管理系统</title>
 
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/font-awesome-4.7.0/css/font-awesome.min.css">
