--- a/GreenPlatform/src/main/resources/templates/web/history.html
+++ b/GreenPlatform/src/main/resources/templates/web/history.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/dhtmlx-4.5/skins/web/dhtmlx.css">
     <link rel="stylesheet" href="/publicFrame/dhtmlx-4.5/skins/dhtmlxgrid.css">
-    <link rel="stylesheet" href="/style/historyStyle.css">
+    <link rel="stylesheet" href="/style/web/historyStyle.css">
 </head>
 <body>
     <header class="historyHeader">
@@ -27,7 +27,7 @@
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li id="cHome"><a href="/system/index">返回首页</a></li>
+                        <li id="cHome"><a href="/web/index">返回首页</a></li>
                         <li id="cJzjl" class="active"><a href="#">捐赠记录 <span class="sr-only">(current)</span></a></li>
                         <li id="cCzls"><a href="#">充值历史</a></li>
                         <li id="cTxls"><a href="#">提现历史</a></li>
