完善基础数据，增加捐赠业务

--- a/GreenPlatform/src/main/resources/templates/login/register.html
+++ b/GreenPlatform/src/main/resources/templates/login/register.html
@@ -23,7 +23,7 @@
                         <b>前端用户注册</b>
                     </div>
                     <div class="panel-body">
-                        <form class="form-horizontal"  id="registerForm">
+                        <div class="form-horizontal"  id="registerForm">
                             <div class="form-group">
                                 <label for="cEmail" class="control-label"></label>
                                 <div class="col-sm-12">
@@ -58,7 +58,7 @@
                                     <a href="./login">已有账号?立即登陆</a>
                                 </div>
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
