--- a/GreenPlatform/src/main/resources/templates/plate/ywjcdm/edit.html
+++ b/GreenPlatform/src/main/resources/templates/plate/ywjcdm/edit.html
@@ -65,16 +65,30 @@
             </tr>
             <tr>
                 <td align="right">
+                    <label for="cDmz" class="control-label">代码值:</label>
+                </td>
+                <td align="left">
+                    <input type="text" class="form-control" id="cDmz" name="cDmz" placeholder="请输入代码值">
+                </td>
+                <td align="right">
                     <label for="cSort" class="control-label">排序号:</label>
                 </td>
                 <td align="left">
                     <input type="text" class="form-control" id="cSort" name="cSort" placeholder="请输入排序号">
                 </td>
+            </tr>
+            <tr>
                 <td align="right">
                     <label for="cZt" class="control-label">状态:</label>
                 </td>
                 <td align="left">
                     <select class="form-control" id="cZt"></select>
+                </td>
+                <td align="right">
+                    <label for="cBz" class="control-label">备注:</label>
+                </td>
+                <td align="left">
+                    <input type="text" class="form-control" id="cBz" name="cBz" placeholder="请输入备注">
                 </td>
             </tr>
             </tbody>
