--- a/GreenPlatform/src/main/resources/templates/plate/ywjcdm/main.html
+++ b/GreenPlatform/src/main/resources/templates/plate/ywjcdm/main.html
@@ -52,8 +52,8 @@
                     <input type="text" class="form-control" id="cDmlb" placeholder="请输入代码类别">
                 </div>
                 <div class="form-group">
-                    <label for="cDm">代码值：</label>
-                    <input type="text" class="form-control" id="cDm" placeholder="请输入代码值">
+                    <label for="cDm">代码：</label>
+                    <input type="text" class="form-control" id="cDm" placeholder="请输入代码">
                 </div>
                 <button type="button" class="btn btn-info" id="btnSearch">搜索</button>
                 <button type="button" class="btn btn-primary" id="btnAdd">新增</button>
