--- a/GreenPlatform/src/main/resources/templates/login/login.html
+++ b/GreenPlatform/src/main/resources/templates/login/login.html
@@ -23,7 +23,7 @@
                         <b>密码登陆</b>
                     </div>
                     <div class="panel-body">
-                        <form class="form-horizontal" id="loginForm">
+                        <div class="form-horizontal" id="loginForm">
                             <div class="form-group">
                                 <label for="cLoginname" class="control-label"></label>
                                 <div class="col-sm-12">
@@ -50,7 +50,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                    <button type="submit" class="btn btn-block btn-lg btn-primary" id="btnLogin">登陆</button>
+                                    <button type="button" class="btn btn-block btn-lg btn-primary" id="btnLogin">登陆</button>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -59,7 +59,7 @@
                                     <a href="register">免费注册</a>
                                 </div>
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
