--- a/GreenPlatform/src/main/resources/templates/web/index.html
+++ b/GreenPlatform/src/main/resources/templates/web/index.html
@@ -33,7 +33,7 @@
                         <li><a href="#market">种子商店</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="../base/login">登陆</a></li>
+                        <li><a th:text="${loginuserHome.plateUser.cUsername}"></a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">我的 <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -187,9 +187,9 @@
                 <div class="modal-body">
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <span id="cLoginname"></span>
+                            <span id="cUsername"></span>
                             <span class="badge" id="cRydj"></span>
-                            <a href="/base/certification" class="btn-link" target="_blank">实名制</a>
+                            <a href="/base/certification" class="btn-link" target="" id="certiBtn">实名制</a>
                         </li>
                         <li class="list-group-item">
                             <span class="badge" id="nNlhz"></span>我的能量
@@ -225,13 +225,13 @@
                             </ul>
                         </li>
                         <li class="list-group-item">
-                            <a href="/base/history" target="_blank">捐赠记录</a>
+                            <a href="/base/history" target="">捐赠记录</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/base/history" target="_blank">充值历史</a>
+                            <a href="/base/history" target="">充值历史</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="/base/history" target="_blank">提现历史</a>
+                            <a href="/base/history" target="">提现历史</a>
                         </li>
                     </ul>
                 </div>
