完善捐赠业务

--- a/GreenPlatform/src/main/resources/templates/web/index.html
+++ b/GreenPlatform/src/main/resources/templates/web/index.html
@@ -22,7 +22,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>绿沙平台</a>
+                    <a class="navbar-brand" href="#"><img class="logo" src="/publicImg/logo.png" width="20px" height="20px">绿沙平台</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
