--- a/GreenPlatform/src/main/resources/static/style/web/webStyle.css
+++ b/GreenPlatform/src/main/resources/static/style/web/webStyle.css
@@ -1,7 +1,8 @@
 /*公共begin*/
 header{
     width: 100%;
-    background: url("../../publicImg/systemBg.jpg") repeat-x;
+    background: url("../../publicImg/systemBg.jpg");
+    background-size: 1349px 500px;
     overflow-x: hidden;
 }
 .mr-top-100{
@@ -23,8 +24,11 @@ header{
 
 /*logo*/
 .logo{
+    width: 40px;
+    height: 40px;
     float: left;
-    margin-right: 8px;
+    margin-right: 5px;
+    margin-top: -10px;
 }
 
 .indexHeader{
@@ -33,6 +37,40 @@ header{
 .loginHeader{
     height:100%;
 }
+/*banner begind*/
+#smallTitle{
+    background: #3e8f3e;
+    padding: 5px 8px;
+    font-size: 12px;
+    margin-left: 105px;
+    border-radius: 5px;
+    color: #ffffff;
+}
+#brandTitle{
+    font-weight: bold;
+    position: absolute;
+    top: 3px;
+    left: 60px;
+    height: 44px;
+    line-height: 28px;
+    font-size: 18px;
+    float: left;
+    padding-right: 5px;
+    border-right: 1px solid #555555;
+    margin: 0;
+    letter-spacing: 5px;
+}
+#brandSubttle{
+    font-weight: normal;
+    font-size: 12px;
+    letter-spacing: normal;
+    display: block;
+    margin-top: -5px;
+}
+#navbarBrand{
+    position: relative;
+}
+/*banner end*/
 
 /*banner下的三个任务begin*/
 .mission{
@@ -116,17 +154,46 @@ header{
 /*banner下的三个任务end*/
 
 /*点赞排行榜begin*/
-#goldList .table{
+.goldListWrap{
     width: 80%;
-    margin:30px auto 0;
+    background: #398439;
+    margin: 0px auto;
+    border-radius: 15px 15px 0 0;
+    overflow: hidden;
+    padding-bottom: 30px;
+}
+.goldListTitle{
+    color: #ffffff;
+    line-height: 60px;
+    margin: 0;
+}
+.goldDzRankTitle{
+    width: 80%;
+    margin:0 auto;
+    text-align: center;
+    background: #ffffff;
+    font-size: 20px;
+    line-height: 32px;
+    border-radius: 5px;
+}
+.goldDzRankContent{
+    font-size: 16px;
+    line-height: 32px;
+    border-radius: 5px;
+    background: #419641;
+    width: 80%;
+    margin: 5px auto;
+    text-align: center;
+    color: #ffffff;
 }
 .btnLikeBox{
     text-align: center;
-    margin-top: 20px;
+    margin: 10px 0;
     position: relative;
 }
 #btnLike{
     font-size: 28px;
+    color: #ffffff;
 }
 #btnLike:hover{
     color: #b92c28;
