--- a/GreenPlatform/src/main/resources/templates/plate/spgl/edit.html
+++ b/GreenPlatform/src/main/resources/templates/plate/spgl/edit.html
@@ -51,6 +51,20 @@
             </tr>
             <tr>
                 <td align="right">
+                    <label for="cImgurl" class="control-label"><i class="require">*</i>图片地址:</label>
+                </td>
+                <td align="left">
+                    <input type="text" class="form-control" id="cImgurl" name="cImgurl" placeholder="请输入图片地址">
+                </td>
+                <td align="right">
+                    <label for="cZt" class="control-label">状态:</label>
+                </td>
+                <td align="left">
+                    <select class="form-control" id="cZt"></select>
+                </td>
+            </tr>
+            <tr>
+                <td align="right">
                     <label for="cSpms" class="control-label"><i class="require">*</i>商品描述:</label>
                 </td>
                 <td align="left" colspan="3">
