--- a/GreenPlatform/src/main/resources/static/style/login/login.css
+++ b/GreenPlatform/src/main/resources/static/style/login/login.css
@@ -1,7 +1,8 @@
 /*公共begin*/
 header{
     width: 100%;
-    background: url("../../publicImg/systemBg.jpg") repeat-x;
+    background: url("../../publicImg/systemBg.jpg");
+    background-size: 1368px 500px;
     overflow-x: hidden;
 }
 .mr-top-100{
